# fraud-detection-end2end

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/schema/: claim_schema.json
dashboards/: streamlit_dashboard.py
data/predictions/: test_predictions.csv
data/profiling/: profile_script.py  ydata_profiling_report.html
data/sample/: sample_fraud_input.csv
deployment/: dockerfile  fastapi_app.py  gunicorn_config.py
models/: feature_columns.pkl  final_model.pkl  scaler.pkl  xgb_pipeline.pkl
notebooks/: 01_problem_defination.ipynb  02_data_exploration.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb
orchestrators/: prefect_flow.py
reports/: eda_report.html  final_test_metrics.md  model_comparison.md
src/: data_pipeline.py  evaluation.py  feature_engineering.py  main.py  mlflow_utils.py  model_training.py  preprocess.py  utils.py
tests/: conftest.py  test_api.py  test_data_pipeline.py  test_features.py  test_model_training.py
