[project]
name = "insurance-fraud-detection"
version = "0.1.0"
description = "A Streamlit-based Insurance Fraud Detection system using XGBoost"
authors = [{name = "Sanjay", email = "your-email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["models", "data"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
